--- a/app/views/explicit/application/_documentation.html.erb
+++ b/app/views/explicit/application/_documentation.html.erb
@@ -4,30 +4,70 @@
   <title><%= local_assigns[:page_title] || "API Documentation" %></title>
 
   <style>
+    html, body {
+      font-family: sans-serif;
+      font-size: 14px;
+      margin: 0;
+      padding: 0;
+
+      --color-neutral-100: #f5f5f5;
+      --color-neutral-200: #e5e5e5;
+      --color-neutral-300: #d4d4d8;
+      --color-neutral-400: #a3a3a3;
+    }
+
+    .container {
+      display: flex;
+    }
+
     .navigation {
+      background-color: var(--color-neutral-100);
+      border-right: 1px solid var(--color-neutral-300);
+      width: 380px;
+      height: 100vh;
     }
     .navigation__section {
     }
     .navigation__section__page {
       display: block;
     }
+
+    .main {
+      flex-grow: 1;
+      width: 100%;
+      height: 100vh;
+      overflow: auto;
+    }
+
+    .page {
+      margin-bottom: 300px;
+    }
   </style>
 </head>
 
 <body>
-  <section class="navigation">
-    <% sections.each do |section| %>
-      <details class="navigation__section" open>
-        <summary><%= section.name %></summary>
+  <div class="container">
+    <section class="navigation">
+      <% sections.each do |section| %>
+        <details class="navigation__section" open>
+          <summary><%= section.name %></summary>
 
+          <% section.pages.each do |page| %>
+            <%= link_to page.title, "##{page.anchor}", class: "navigation__section__page" %>
+          <% end %>
+        </details>
+      <% end %>
+    </section>
+
+    <main class="main">
+      <% sections.each do |section| %>
         <% section.pages.each do |page| %>
-          <%= link_to page.title, "##{page.anchor}", class: "navigation__section__page" %>
+          <div class="page">
+            <%= render partial: page.partial, locals: { page: } %>
+          </div>
         <% end %>
-      </details>
-    <% end %>
-  </section>
-
-  <main>
-  </main>
+      <% end %>
+    </main>
+  </div>
 </body>
 </html>
