--- a/app/views/explicit/application/_documentation.html.erb
+++ b/app/views/explicit/application/_documentation.html.erb
@@ -14,6 +14,8 @@
       --color-neutral-200: #e5e5e5;
       --color-neutral-300: #d4d4d8;
       --color-neutral-400: #a3a3a3;
+      --color-neutral-500: #737373;
+      --color-neutral-600: #525252;
     }
 
     .container {
@@ -40,7 +42,68 @@
     }
 
     .page {
+      padding: 0 2rem;
       margin-bottom: 100px;
+    }
+    .page:not(:first-of-type) {
+      border-top: 1px solid var(--color-neutral-200);
+    }
+    .page__container {
+      display: flex;
+      gap: 1rem;
+    }
+    .page__request {
+      width: 50%;
+    }
+    .page__request__description {
+      line-height: 1.6rem;
+    }
+    .page__response {
+      width: 50%;
+    }
+
+    .markdown code {
+      background: var(--color-neutral-100);
+      color: var(--color-neutral-900);
+    }
+    .markdown p:first-of-type {
+      margin-block-start: 0em;
+    }
+    .markdown p:last-of-type {
+      margin-block-end: 0em;
+    }
+
+    .params {
+      margin-top: 1rem;
+      border: 1px solid var(--color-neutral-200);
+      border-radius: 8px;
+    }
+    .params__header {
+      padding: 5px;
+      text-align: center;
+
+      font-size: 12px;
+      text-transform: uppercase;
+      color: var(--color-neutral-500);
+      border-bottom: 1px solid var(--color-neutral-200);
+
+      background-color: var(--color-neutral-100);
+      border-top-left-radius: 8px;
+      border-top-right-radius: 8px;
+    }
+    .params__param {
+      padding: 0.8rem;
+    }
+    .params__param:not(:last-of-type) {
+      border-bottom: 1px solid var(--color-neutral-200);
+    }
+    .params__param__name {
+      font-family: monospace;
+      font-weight: bold;
+    }
+    .params__param__description {
+      margin-top: 0.5rem;
+      color: var(--color-neutral-500);
     }
   </style>
 </head>
