move views to explicit/documentation

--- a/app/views/explicit/documentation/_page.html.erb
+++ b/app/views/explicit/documentation/_page.html.erb
@@ -106,6 +106,8 @@
       color: var(--color-neutral-500);
     }
   </style>
+
+  <script src="//unpkg.com/alpinejs" defer></script>
 </head>
 
 <body>
