--- a/app/views/explicit/documentation/_page.html.erb
+++ b/app/views/explicit/documentation/_page.html.erb
@@ -19,10 +19,6 @@
       --color-neutral-600: #525252;
     }
 
-    .container {
-      display: flex;
-    }
-
     .navigation {
       background-color: var(--color-neutral-100);
       border-right: 1px solid var(--color-neutral-300);
@@ -69,9 +65,6 @@
     .page__request {
       width: 50%;
     }
-    .page__request__description {
-      line-height: 1.6rem;
-    }
     .page__response {
       width: 50%;
     }
@@ -87,55 +80,72 @@
       margin-block-end: 0em;
     }
 
-    .params {
-      margin-top: 1rem;
+    .record {
       border: 1px solid var(--color-neutral-200);
       border-radius: 8px;
       overflow: hidden;
     }
-    .params__param {
+    .record__param {
       padding: 0.8rem;
     }
-    .params__param:not(:last-of-type) {
+    .record__param:not(:last-of-type) {
       border-bottom: 1px solid var(--color-neutral-200);
     }
-    .params__summary {
+    .record__summary {
       display: flex;
       align-items: end;
       gap: 1rem;
     }
-    .params__summary__expand {
+    .record__summary__expand {
       margin-left: auto;
       color: var(--color-neutral-400);
     }
-    .params__name {
+    .record__name {
       font-family: monospace;
       font-weight: bold;
     }
-    .params__jsontype {
+    .record__jsontype {
       font-size: 12px;
       color: var(--color-neutral-500);
     }
-    .params__description {
+    .record__description {
       margin-top: 0.5rem;
       color: var(--color-neutral-500);
     }
-    .params__constraint {
+    .record__constraint {
       font-size: 12px;
       background: var(--color-neutral-200);
       padding: 1px 4px;
       border-radius: 1px;
     }
-    .params__subtype {
+    .record__subtype {
       margin-top: 0.5rem;
+    }
+
+    .responses__tabs {
+      display: flex;
+    }
+    .responses__tab {
+      padding: 10px;
+    }
+    .responses__tab.active {
+      border-left: 1px solid var(--color-neutral-300);
+      border-top: 1px solid var(--color-neutral-300);
+      border-right: 1px solid var(--color-neutral-300);
+      border-bottom: 1px solid #FFF;
+      margin-bottom: -1px;
+    }
+    .responses__types {
+      border: 1px solid var(--color-neutral-300);
     }
   </style>
 
+  <script src="https://cdn.tailwindcss.com"></script>
   <script src="//unpkg.com/alpinejs" defer></script>
 </head>
 
 <body>
-  <div class="container">
+  <div class="flex">
     <section class="navigation">
       <% sections.each do |section| %>
         <details class="navigation__section" open>
