add downcase option to string type

--- a/app/views/explicit/documentation/type/_string.html.erb
+++ b/app/views/explicit/documentation/type/_string.html.erb
@@ -21,3 +21,9 @@
     <%= "format #{type.format.inspect}" %>
   </span>
 <% end %>
+
+<% if type.downcase %>
+  <span class="record__constraint">
+    <%= "case insensitive" %>
+  </span>
+<% end %>
