--- a/app/views/explicit/documentation/request/_examples.html.erb
+++ b/app/views/explicit/documentation/request/_examples.html.erb
@@ -1,16 +1,51 @@
-<div class="responses__examples">
-  <% examples = request.examples[status] %>
+<% examples = request.examples[status] %>
 
+<div
+  class="responses__examples"
+  x-data="{ example: 0, maxsize: <%= examples.size %> }"
+>
   <% if examples.any? %>
-    <div class="-mx-4 my-4 p-4 text-sm uppercase bg-neutral-100 font-medium tracking-wide text-neutral-600">
-      <%= examples.size > 1 ? "Examples" : "Example" %>
+    <div class="flex items-center -mx-4 my-4 p-4 bg-neutral-100">
+      <div class="text-sm uppercase font-medium tracking-wide text-neutral-600">
+        <% if examples.size > 1 %>
+          Examples (<span x-text="example+1"></span>/<span x-text="maxsize"></span>)
+        <% else %>
+          Example
+        <% end %>
+      </div>
+
+      <% if examples.size > 1 %>
+        <div class="ml-auto flex">
+          <button
+            class="p-1 text-neutral-800 hover:text-black"
+            x-bind:class="{'opacity-30': example === 0}"
+            x-bind:disabled="example === 0"
+            x-on:click="example -= 1"
+          >
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5 8.25 12l7.5-7.5" />
+            </svg>
+          </button>
+
+          <button
+            class="p-1 text-neutral-800 hover:text-black"
+            x-bind:class="{'opacity-30': example === maxsize-1}"
+            x-bind:disabled="example === maxsize-1"
+            x-on:click="example += 1"
+          >
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+              <path stroke-linecap="round" stroke-linejoin="round" d="m8.25 4.5 7.5 7.5-7.5 7.5" />
+            </svg>
+          </button>
+        </div>
+      <% end %>
     </div>
   <% end %>
 
-  <% request.examples[status].each do |example| %>
+  <% request.examples[status].each.with_index do |example, index| %>
     <% route = request.routes.first %>
 
-    <pre class="font-mono text-sm">
+    <pre class="font-mono text-sm" x-show="example == <%= index %>">
 curl -X<%= route.method.to_s.upcase %> <%= request.get_base_url %><%= request.get_base_path %><%= route.path %>
 -H "Content-Type: application/json"
 <% example.headers.each do |key, value| %>-H "<%= key %>: <%= value %>"<% end %>
