remove border radius

--- a/app/views/explicit/documentation/type/_record.html.erb
+++ b/app/views/explicit/documentation/type/_record.html.erb
@@ -1,4 +1,4 @@
-<div class="record">
+<div class="border">
   <% type.attributes.each do |attribute_name, type| %>
     <div
       class="record__param"
