--- a/test/dummy/app/views/api/v1/_introduction.html.erb
+++ b/test/dummy/app/views/api/v1/_introduction.html.erb
@@ -1,3 +1,3 @@
-<h1>Welcome to Acme API</h1>
+<h1>Acme API</h1>
 
-<div>This is a regular rails partial</div>
+<p>This API documentation was generated to serve as an example of the Explicit gem.</p>
