render attribute for hash keys and values

--- a/app/views/explicit/documentation/type/_hash.html.erb
+++ b/app/views/explicit/documentation/type/_hash.html.erb
@@ -1,1 +1,4 @@
-<!-- TODO -->
+<div class="border divide-y">
+  <%= type_attribute_render name: "Keys", type: type.keytype %>
+  <%= type_attribute_render name: "Values", type: type.valuetype %>
+</div>
