--- a/app/views/explicit/documentation/_attribute.html.erb
+++ b/app/views/explicit/documentation/_attribute.html.erb
@@ -1,5 +1,5 @@
 <div class="p-3" x-data="{ expanded: false }">
-  <div class="flex items-end gap-2" x-on:click="expanded = !expanded">
+  <div class="flex items-center gap-2" x-on:click="expanded = !expanded">
     <span class="font-mono font-bold">
       <%= name %>
     </span>
