--- a/app/views/explicit/documentation/request/_examples.html.erb
+++ b/app/views/explicit/documentation/request/_examples.html.erb
@@ -46,10 +46,10 @@
     <% route = request.routes.first %>
 
     <pre class="font-mono text-sm" x-show="example == <%= index %>">
-curl -X<%= route.method.to_s.upcase %> <%= request.get_base_url %><%= request.get_base_path %><%= route.path %>
+curl -X<%= route.method.to_s.upcase %> <%= request.get_base_url %><%= request.get_base_path %><%= route.replace_path_params(example.params) %>
 -H "Content-Type: application/json"
 <% example.headers.each do |key, value| %>-H "<%= key %>: <%= value %>"<% end %>
--d <%= JSON.pretty_generate(example.params) %>
+-d <%= JSON.pretty_generate(example.params.except(*route.params)) %>
 
 HTTP <%= example.response.status %>
 <%= JSON.pretty_generate(example.response.data) %></pre>
