--- a/app/views/explicit/documentation/request/_examples.html.erb
+++ b/app/views/explicit/documentation/request/_examples.html.erb
@@ -45,6 +45,6 @@
   <% request.examples[status].each.with_index do |example, index| %>
     <% route = request.routes.first %>
 
-    <pre class="font-mono text-sm" x-show="example == <%= index %>"><%= format_request_example(request:, example:) %></pre>
+    <pre class="font-mono text-sm overflow-auto" x-show="example == <%= index %>"><%= format_request_example(request:, example:) %></pre>
   <% end %>
 </div>
