drop parse from agreement

--- a/app/views/explicit/documentation/type/_agreement.html.erb
+++ b/app/views/explicit/documentation/type/_agreement.html.erb
@@ -1,10 +1,7 @@
-<!-- TODO -->
-<% if type.parse %>
-  The following values are accepted:
+The following values are accepted:
 
-  <div class="inline-flex flex-wrap gap-2">
-    <% [true, "true", "1", 1, "on"].each do |value| %>
-      <code class="font-mono text-xs bg-neutral-200 p-px"><%= value.inspect %></code>
-    <% end %>
-  </div>
-<% end %>
+<div class="inline-flex flex-wrap gap-2">
+  <% Explicit::Type::Agreement::VALUES.each do |value| %>
+    <code class="font-mono text-xs bg-neutral-200 p-px"><%= value.inspect %></code>
+  <% end %>
+</div>
