--- a/app/views/explicit/documentation/type/_date_time_iso8601.html.erb
+++ b/app/views/explicit/documentation/type/_date_time_iso8601.html.erb
@@ -1,1 +1,3 @@
-<!-- TODO -->
+<div class="text-sm">
+  Value must be a valid date time according to ISO 8601. For example: <code>"2024-12-10T14:21:00Z"</code>
+</div>
