add date time posix details

--- a/app/views/explicit/documentation/type/_date_time_posix.html.erb
+++ b/app/views/explicit/documentation/type/_date_time_posix.html.erb
@@ -1,1 +1,3 @@
-<!-- TODO -->
+<div class="text-sm">
+  Value must be a valid POSIX timestamp. For example: <code>1733923153</code> represents "Dec 11 2024 13:19:13"
+</div>
