--- a/app/views/explicit/documentation/type/_enum.html.erb
+++ b/app/views/explicit/documentation/type/_enum.html.erb
@@ -1,1 +1,7 @@
-<!-- TODO -->
+The following values are accepted:
+
+<div class="inline-flex flex-wrap gap-2">
+  <% type.allowed_values.each do |value, _| %>
+    <code class="font-mono text-xs bg-neutral-200 p-px"><%= value.inspect %></code>
+  <% end %>
+</div>
