preparing to add screenshot on readme

--- a/test/dummy/app/views/api/v1/_introduction.html.erb
+++ b/test/dummy/app/views/api/v1/_introduction.html.erb
@@ -1,3 +1,5 @@
-<h1>Acme API</h1>
-
-<p>This API documentation was generated to serve as an example of the Explicit gem.</p>
+<p>
+  This API documentation serves as an example of the Explicit gem.<br/>
+  
+  You can find the source code and complete documentation at <a class="text-blue-600 underline" href="https://github.com/luizpvas/explicit" target="_blank">the github repo</a>.
+</p>
