--- a/app/views/explicit/documentation/_attribute.html.erb
+++ b/app/views/explicit/documentation/_attribute.html.erb
@@ -5,7 +5,7 @@
     </span>
 
     <span class="text-sm text-neutral-500">
-      <%= type.jsontype %>
+      <%= type.summary %>
     </span>
 
     <% if type.param_location_path? %>
