--- a/app/views/explicit/documentation/_page.html.erb
+++ b/app/views/explicit/documentation/_page.html.erb
@@ -114,6 +114,10 @@
         </div>
       <% end %>
 
+      <div class="text-center text-xs text-neutral-500 p-1 border-y mb-4">
+        Version <%= version %>
+      </div>
+
       <div class="space-y-4" >
         <% sections.each do |section| %>
           <details class="px-4" open>
