--- a/app/views/explicit/documentation/_attribute.html.erb
+++ b/app/views/explicit/documentation/_attribute.html.erb
@@ -23,8 +23,8 @@
   <% if type.has_details? || type.description.present? %>
     <div class="mt-2" x-show="expanded">
       <% if (description = type.description) %>
-        <div class="text-neutral-600">
-          <%= description %>
+        <div class="text-neutral-600 markdown">
+          <%= Explicit::Documentation::Markdown.to_html(description) %>
         </div>
       <% end %>
 
