--- a/app/views/explicit/documentation/_page.html.erb
+++ b/app/views/explicit/documentation/_page.html.erb
@@ -56,6 +56,12 @@
     .markdown p:last-of-type {
       margin-block-end: 0em;
     }
+    .markdown ul {
+      list-style-type: disc;
+    }
+    .markdown li {
+      margin-left: 2rem;
+    }
 
     .record__param {
       padding: 0.8rem;
