--- a/app/views/explicit/documentation/_page.html.erb
+++ b/app/views/explicit/documentation/_page.html.erb
@@ -56,6 +56,12 @@
     .markdown p:last-of-type {
       margin-block-end: 0em;
     }
+    .markdown ul {
+      list-style-type: disc;
+    }
+    .markdown li {
+      margin-left: 2rem;
+    }
 
     .record__param {
       padding: 0.8rem;
@@ -114,8 +120,20 @@
         </div>
       <% end %>
 
-      <div class="text-center text-xs text-neutral-500 p-1 border-y mb-4">
-        Version <%= version %>
+      <div class="text-center text-xs border-y mb-4 flex divide-x">
+        <div class="p-1 text-neutral-500 w-1/2">
+          Version <%= version %>
+        </div>
+        <div class="p-1 w-1/2">
+          <%= link_to url_helpers.explicit_documentation_swagger_path, target: "_blank", class: "flex items-center justify-center gap-1 text-neutral-900" do %>
+            <span>Swagger</span>
+
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor" class="size-4">
+              <path d="M6.22 8.72a.75.75 0 0 0 1.06 1.06l5.22-5.22v1.69a.75.75 0 0 0 1.5 0v-3.5a.75.75 0 0 0-.75-.75h-3.5a.75.75 0 0 0 0 1.5h1.69L6.22 8.72Z" />
+              <path d="M3.5 6.75c0-.69.56-1.25 1.25-1.25H7A.75.75 0 0 0 7 4H4.75A2.75 2.75 0 0 0 2 6.75v4.5A2.75 2.75 0 0 0 4.75 14h4.5A2.75 2.75 0 0 0 12 11.25V9a.75.75 0 0 0-1.5 0v2.25c0 .69-.56 1.25-1.25 1.25h-4.5c-.69 0-1.25-.56-1.25-1.25v-4.5Z" />
+            </svg>
+          <% end %>
+        </div>
       </div>
 
       <div class="space-y-4" >
