--- a/app/views/explicit/documentation/_page.html.erb
+++ b/app/views/explicit/documentation/_page.html.erb
@@ -5,45 +5,8 @@
 
   <style>
     html, body {
-      font-family: sans-serif;
       font-size: 14px;
-      margin: 0;
-      padding: 0;
-
-      --color-neutral-50: #fafafa;
-      --color-neutral-100: #f5f5f5;
-      --color-neutral-200: #e5e5e5;
-      --color-neutral-300: #d4d4d8;
-      --color-neutral-400: #a3a3a3;
-      --color-neutral-500: #737373;
-      --color-neutral-600: #525252;
-    }
-
-    .page:not(:first-of-type) {
-      border-top: 1px solid var(--color-neutral-200);
-    }
-    .page__url {
-      background: var(--color-neutral-100);
-      border: 1px solid var(--color-neutral-300);
-      font-family: monospace;
-      padding: 0.8rem;
-    }
-    .page__url__shared {
-      color: var(--color-neutral-500);
-    }
-    .page__url__path {
-      font-weight: bold;
-    }
-    .page__container {
-      display: flex;
-      gap: 1rem;
-      margin-top: 1rem;
-    }
-    .page__request {
-      width: 50%;
-    }
-    .page__response {
-      width: 50%;
+      font-family: system-ui, sans-serif;
     }
 
     .markdown code {
@@ -61,48 +24,6 @@
     }
     .markdown li {
       margin-left: 2rem;
-    }
-
-    .record__param {
-      padding: 0.8rem;
-    }
-    .record__param:not(:last-of-type) {
-      border-bottom: 1px solid var(--color-neutral-200);
-    }
-    .record__summary {
-      display: flex;
-      align-items: end;
-      gap: 1rem;
-    }
-    .record__summary__expand {
-      margin-left: auto;
-      color: var(--color-neutral-400);
-    }
-    .record__constraint {
-      font-size: 12px;
-      background: var(--color-neutral-200);
-      padding: 1px 4px;
-      border-radius: 1px;
-    }
-    .record__subtype {
-      margin-top: 0.5rem;
-    }
-
-    .responses__tabs {
-      display: flex;
-    }
-    .responses__tab {
-      padding: 10px;
-    }
-    .responses__tab.active {
-      border-left: 1px solid var(--color-neutral-300);
-      border-top: 1px solid var(--color-neutral-300);
-      border-right: 1px solid var(--color-neutral-300);
-      border-bottom: 1px solid #FFF;
-      margin-bottom: -1px;
-    }
-    .responses__types {
-      border: 1px solid var(--color-neutral-300);
     }
   </style>
 
