consistent naming (fixes #22)

--- a/app/views/explicit/documentation/type/_hash.html.erb
+++ b/app/views/explicit/documentation/type/_hash.html.erb
@@ -1,4 +1,4 @@
 <div class="border divide-y">
-  <%= type_attribute_render name: "Keys", type: type.keytype %>
-  <%= type_attribute_render name: "Values", type: type.valuetype %>
+  <%= type_attribute_render name: "Keys", type: type.key_type %>
+  <%= type_attribute_render name: "Values", type: type.value_type %>
 </div>
