--- a/app/views/explicit/documentation/type/_array.html.erb
+++ b/app/views/explicit/documentation/type/_array.html.erb
@@ -1,3 +1,3 @@
 <div class="border divide-y">
-  <%= type_attribute_render name: "Items", type: type.itemtype %>
+  <%= type_attribute_render name: "Items", type: type.item_type %>
 </div>
